--- a/estilo/style.css
+++ b/estilo/style.css
@@ -59,7 +59,7 @@ header > p{
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     margin: auto;
-    margin-bottom: 30px;
+    padding-bottom: 50px;
     max-width: 600px;
     padding-right: 10px;
     padding-left: 10px;
